fix: update dark mode styles to improve background color for better visibility

--- a/src/styles/components/faq.less
+++ b/src/styles/components/faq.less
@@ -195,6 +195,8 @@
 @media only screen and (min-width: 0rem) {
   body.dark-mode {
     #faq-1741 {
+      background-color: var(--medium);
+
       .cs-title,
       .cs-item-text {
         color: var(--bodyTextColorWhite);
